[package]
name = "kemono_to_epub"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.28", default-features = false, features=["std"]}
clap_derive = { version = "4.5.28", default-features = false }
reqwest = {version="0.12.12", default-features = false, features=["default-tls"]}
scraper = {version="0.22.0", default-features = false, features=["main"]}
serde = {version="1.0.217", default-features = false, features=["derive"]}
serde_json = {version="1.0.135", default-features = false, features=["std"]}
tokio = {version="1.40.0", default-features = false, features=["macros", "rt-multi-thread"]}
zip = {version="2.2.2", default-features=false}
